fixing results overflow on xs and smaller

--- a/_sass/components/popovers/popover-search.scss
+++ b/_sass/components/popovers/popover-search.scss
@@ -24,9 +24,11 @@
     }
 
     @include media(xs) {
-      height: 420px;
+      height: calc(100% - 80px);
+      overflow-y: visible;
       margin: 80px 0;
-      max-width: 460px;
+      max-width: 100%;
+      border-radius: 0px;
     }
   }
 
