--- a/_sass/jekyll/layout.scss
+++ b/_sass/jekyll/layout.scss
@@ -253,7 +253,5 @@
 // }
 
 .no-scroll {
-  overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
